finalized elements
